--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ html {
 .container .info h1{
     font-size: 3rem;
     margin-bottom: 1rem;
+    font-display: 23px;
 }
 
 container .info h2{
@@ -41,5 +42,5 @@ container .info h2{
 
 container .info p{
     font-size: 1.2rem;
-    margin-bottom: 60%;
+    margin-bottom: 40%;
 }
