--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&family=Space+Grotesk&family=Trispace:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
 
  * {
     padding: 0;
@@ -7,8 +7,8 @@
  }
 
 html {
-    font-family: 'Roboto Mono';
-    font-size: 12px;
+    font-family: 'Source Code Pro';
+    font-size: 14px;
 }
 
 #hero {
@@ -22,25 +22,46 @@ html {
 .container {
     width: 90%;
     height: 100%;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 .container .info h1{
     font-size: 3rem;
     margin-bottom: 1rem;
-    font-display: 23px;
 }
 
-container .info h2{
-    font-size: 1.2rem;
+.container .info h2{
+    font-size: 1.5rem;
     margin-bottom: 2rem;
 }
 
-container .info p{
+.container .info p{
     font-size: 1.2rem;
-    margin-bottom: 40%;
+    max-width: 70%;
+    margin-bottom: .5rem;
+    /* margin: 0 auto; */
+    margin-left: 0;
+}
+
+.container .info a{
+    text-decoration: none;
+    display: inline-block;
+    background-color: white;
+    border-radius: 4px;
+    font-size: 1.8rem;
+    padding: 0.5em 2em;
+    margin-top: 2em;
+    color: black;
+}
+
+@media only screen and (max-width:768px) {
+    html {
+        font-size: 10px;
+    }
+    
 }
