--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
-
+/*rest browser to 0 just incase*/
  * {
     padding: 0;
     margin: 0 auto;
@@ -35,6 +35,70 @@ html {
     margin-bottom: 1rem;
 }
 
+/* the code for the loading starts here */
+h1.loading{
+  font-size: 3rem;
+  font-family: 'Source Code Pro';
+  
+}  
+span[class^="dot-"]{
+  opacity: 0;
+}
+.dot-one{
+  animation: dot-one 2s infinite linear
+}
+.dot-two{
+  animation: dot-two 2s infinite linear
+}
+.dot-three{
+  animation: dot-three 2s infinite linear
+}
+@keyframes dot-one{
+  0%{
+    opacity: 0;
+  }
+  15%{
+    opacity: 0;
+  }
+  25%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+@keyframes dot-two{
+  0%{
+    opacity: 0;
+  }
+  25%{
+    opacity: 0;
+  }
+  50%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+@keyframes dot-three{
+  0%{
+    opacity: 0;
+  }
+  50%{
+    opacity: 0;
+  }
+  75%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+/*ends here*/
+
 .container .info h2{
     font-size: 1.5rem;
     margin-bottom: 2rem;
@@ -58,7 +122,7 @@ html {
     margin-top: 2em;
     color: black;
 }
-
+/* to adapt to small screens*/
 @media only screen and (max-width:768px) {
     html {
         font-size: 10px;
