--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ html {
 
 /* the code for the loading starts here */
 h1.loading{
-  font-size: 3rem;
+  font-size: oem;
   font-family: 'Source Code Pro';
   
 }  
@@ -99,27 +99,27 @@ span[class^="dot-"]{
 }
 /*ends here*/
 
-.container .info h2{
+/*.container .info h2{
     font-size: 1.5rem;
-    margin-bottom: 2rem;
-}
+    margin-bottom: 1rem;
+}*/
 
-.container .info p{
+/*.container .info p{
     font-size: 1.2rem;
-    max-width: 70%;
+    max-width: 60%;
     margin-bottom: .5rem;
-    /* margin: 0 auto; */
+    /* margin: 0 auto; 
     margin-left: 0;
-}
+}*/
 
 .container .info a{
     text-decoration: none;
     display: inline-block;
     background-color: white;
-    border-radius: 4px;
-    font-size: 1.8rem;
+    border-radius: 60px;
+    font-size: 1.1rem;
     padding: 0.5em 2em;
-    margin-top: 2em;
+    margin-top: 0.1em;
     color: black;
 }
 /* to adapt to small screens*/
