--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ html {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.445), rgba(0, 0, 0, 0.445)), url('./nik-owens-40OJLYVWeeM-unsplash.jpg') no-repeat center / cover;
     color: white;
+    
 
 }
 
@@ -115,12 +116,14 @@ span[class^="dot-"]{
 .container .info a{
     text-decoration: none;
     display: inline-block;
-    background-color: white;
-    border-radius: 60px;
+    background-color: transparent;
+    border: 2px solid white;
     font-size: 1.1rem;
+    letter-spacing: .1rem;
     padding: 0.5em 2em;
     margin-top: 0.1em;
-    color: black;
+    color: white;
+    transition: .3s ease background-color;
 }
 /* to adapt to small screens*/
 @media only screen and (max-width:768px) {
