--- a/globalStyles.css
+++ b/globalStyles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 html{
-    font-size: 10px;
+    font-size: 18px;
     overflow-x: hidden;
 }
 
@@ -17,7 +17,7 @@ html{
 }
 
 body{
-    background-color: var(--blue-1);
+    background-color: var(--lightGreen-1);
     overflow: hidden;
 }
 
@@ -32,6 +32,32 @@ section{
 	width: 90%;
 	margin: 0 auto;
 }
+
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+h1, h2, h3, h4{
+    font-family: Space Grotesk;
+}
+
+p{
+    font-family: Space Grotesk;
+    font-weight: 400;
+    line-height: 1.4em;
+    font-size: 1.8rem;
+}
+
+
+a{
+    display: inline-block;
+    text-decoration: none;
+}
+
+
 @media only screen and (max-width: 768px) {
 	section {
 		padding: 50px 0;
