--- a/globalStyles.css
+++ b/globalStyles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 html{
-    font-size: 18px;
+    font-size: 10px;
     overflow-x: hidden;
 }
 
@@ -14,6 +14,7 @@ html{
 	--black-2: #3f3c3c;
 	--black-3: #5b6359;
 	--white-1: #e8e8e8;
+    --black-4: #000000;
 }
 
 body{
