--- a/globalStyles.css
+++ b/globalStyles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
 html{
-    font-size: 10px;
+    font-size: 9px;
     overflow-x: hidden;
 }
 
@@ -29,7 +29,7 @@ section{
 
 /* contains every info in 1200px */
 .container {
-	max-width: 1200px;
+	max-width: 1000px;
 	width: 90%;
 	margin: 0 auto;
 }
@@ -37,7 +37,7 @@ section{
 img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 
 }
 
