--- a/style.css
+++ b/style.css
@@ -16,7 +16,64 @@ html{
 #hero {
     width: 100%;
     height: 100vh;
-    background:url(images/ivan-torres-MQUqbmszGGM-unsplash.jpg) no-repeat center / cover;
+    background:linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)), url(images/shardar-tarikul-islam-YWdcZ0ZC5q0-unsplash.jpg) no-repeat center / cover;
+    color: wheat;
+}
+
+.container{
+    width: 90%;
+    height: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+}
+
+.container .info h1{
+    font-size: 3rem;
+    margin-bottom: .5rem;
+}
+
+.container .info h2{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.container .info p{
+    font-size: 1rem;
+    max-width: 70%;
+}
+
+.container .info a{
+    text-decoration: none;
+    display: inline-block;
+    background-color: blanchedalmond;
+    border-radius: 4px;
+    padding: 0.5 em 2 em;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+    color: black;
+}
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* screen media query */
+@media only screen and (max-width:768px) {
+    html {
+        font-size: 10px;
+    }
 }
