--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Single+Day&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
 
 
 *{
@@ -8,16 +9,18 @@
 }
 
 html{
-    font-family: 'Single Day';
+    font-family: 'Nanum Gothic Coding';
     font-size: 18px;
     font-weight: 400;
+    scroll-behavior: smooth;
 }
 
 #hero {
     width: 100%;
     height: 100vh;
-    background:linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)), url(images/shardar-tarikul-islam-YWdcZ0ZC5q0-unsplash.jpg) no-repeat center / cover;
-    color: wheat;
+    background:linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)), url(images/pylyp-sukhenko-y-XZf_TNRms-unsplash.jpg) no-repeat center / cover;
+    color: white;
+    /* position: fixed; */
 }
 
 .container{
@@ -33,7 +36,9 @@ html{
 .container .info h1{
     font-size: 3rem;
     margin-bottom: .5rem;
+    position: relative;
 }
+
 
 .container .info h2{
     font-size: 1.5rem;
@@ -48,18 +53,27 @@ html{
 .container .info a{
     text-decoration: none;
     display: inline-block;
-    background-color: blanchedalmond;
+    background-color: none;
     border-radius: 4px;
     padding: 0.5 em 2 em;
     font-size: 1.5rem;
     margin-bottom: 2rem;
-    color: black;
+}
+
+#arrow_drop_down{
+    font-size: 1.7rem;
+    color: white;
 }
 
 
 
-
-
+#Chef {
+    width: 100%;
+    height: 100vh;
+    background: black;
+    color: rgb(251, 244, 244);
+    /* position: fixed; */
+}
 
 
 
