--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ html{
     max-width: 70%;
 }
 
+
+/* arrow contro */
 .info a{
     text-decoration: none;
     display: inline-block;
@@ -60,8 +62,8 @@ html{
     margin-bottom: 2rem;
 }
 
-#arrow_drop_down{
-    font-size: 1.7rem;
+#arrow_drop_down ,#arrow_drop_up{
+    font-size: 1.8rem;
     color: white;
 }
 
@@ -78,8 +80,6 @@ html{
 .chef h1{
     font-size: 3rem;
     margin-bottom: .5rem;
-    /* margin: 0 auto; */
-    /* text-align: center; */
     position: relative;
     white-space: nowrap;
     
@@ -87,6 +87,22 @@ html{
 
 
 
+#SacredRitual{
+    width: 100%;
+    height: 100vh;
+    background:linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)), url(images/lasse-bergqvist-ro3H4mJIArA-unsplash.jpg) no-repeat center / cover;
+    color: white;
+    /* position: fixed; */
+}
+
+
+.book h1{
+    font-size: 3rem;
+    margin-bottom: .5rem;
+    position: relative;
+    white-space: nowrap;
+    
+}
 
 
 
