--- a/style.css
+++ b/style.css
@@ -1,186 +1,131 @@
-/* Font Import */
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap');
-
-/* Reset Styles */
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@400;700&display=swap");
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-
-/* Base Styling for the HTML Document */
 html {
-    font-family: 'Nanum Gothic Coding';  /* Set the default font family */
-    font-size: 18px;  /* Set the default font size */
-    font-weight: 400;  /* Set the default font weight */
-    scroll-behavior: smooth;  /* Enable smooth scrolling behavior */
+  font-family: "Nanum Gothic Coding";
+  font-size: 18px;
+  font-weight: 400;
+  scroll-behavior: smooth;
 }
-
-/* General Container Styling */
 .container {
-    width: 90%;
-    height: 100%;
-    max-width: 1000px;
-    margin: 0 auto;  /* Center the container horizontally */
-    display: flex;
-    align-items: center;
-    justify-self: center;
+  width: 90%;
+  height: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-self: center;
 }
-
-/* Styling for Hero Section */
 #hero {
-    width: 100%;
-    height: 100vh;  /* Set the height of the hero section to 100% of the viewport height */
-    background: linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)), url(images/pylyp-sukhenko-y-XZf_TNRms-unsplash.jpg) no-repeat center / cover;
-    color: white;
-    /* position: fixed; */  /* Uncomment this line if you want the hero section to be fixed */
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)),
+    url(images/pylyp-sukhenko-y-XZf_TNRms-unsplash.jpg) no-repeat center / cover;
+  color: white;
 }
-
-/* Typography Styling for the Hero Section */
 .info h1 {
-    font-size: 3rem;  /* Set the font size for h1 elements */
-    margin-bottom: .5rem;  /* Set bottom margin */
-    position: relative;  /* Enable relative positioning */
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+  position: relative;
 }
-
 .info h2 {
-    font-size: 1.5rem;  /* Set the font size for h2 elements */
-    margin-bottom: 1rem;  /* Set bottom margin */
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
-
 .info p {
-    font-size: 1rem;  /* Set the font size for paragraphs */
-    max-width: 70%;  /* Set the maximum width for better readability */
+  font-size: 1rem;
+  max-width: 70%;
 }
-
-/* Styling for Arrow Control Links */
 .info a {
-    text-decoration: none;
-    display: inline-block;
-    background-color: none;  /* Set background color for better visibility */
-    border-radius: 4px;
-    padding: 0rem 2em;  /* Adjust padding */
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
+  text-decoration: none;
+  display: inline-block;
+  background-color: none;
+  border-radius: 4px;
+  padding: 0rem 2em;
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
-
-/* Styling for Arrow Icons */
 #arrow_drop_down,
 #arrow_drop_up,
 #download_for_offline {
-    font-size: 1.8rem;  /* Set the font size for arrow icons */
-    color: white;
+  font-size: 1.8rem;
+  color: white;
 }
-
-/* Styling for Sacred Components Section */
 #SacredComponents {
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)), url(images/jean-claude-attipoe-EtJiql0AdwI-unsplash.jpg) no-repeat center / cover;
-    color: white;
-    /* position: fixed; */  /* Uncomment this line if you want the section to be fixed */
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)),
+    url(images/jean-claude-attipoe-EtJiql0AdwI-unsplash.jpg) no-repeat center /
+      cover;
+  color: white;
 }
-
-/* Typography Styling for the Sacred Components Section */
 .chef h1 {
-    font-size: 3rem;
-    margin-bottom: .5rem;
-    position: relative;
-    white-space: nowrap;  /* Prevent line breaks */
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+  position: relative;
+  white-space: nowrap;
 }
-
-/* Styling for Sacred Ritual Section */
 #SacredRitual {
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)), url(images/lasse-bergqvist-ro3H4mJIArA-unsplash.jpg) no-repeat center / cover;
-    color: white;
-    /* position: fixed; */  /* Uncomment this line if you want the section to be fixed */
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.444), rgba(0, 0, 0, 0.446)),
+    url(images/lasse-bergqvist-ro3H4mJIArA-unsplash.jpg) no-repeat center /
+      cover;
+  color: white;
 }
-
-/* Typography Styling for the Sacred Ritual Section */
 .book h1 {
-    font-size: 3rem;
-    margin-bottom: .5rem;
-    position: relative;
-    white-space: nowrap;  /* Prevent line breaks */
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+  position: relative;
+  white-space: nowrap;
 }
-
-/* Media Query for Small Screens */
 @media only screen and (max-width: 768px) {
-    html {
-        font-size: 10px;  /* Adjust the font size for smaller screens */
-    }
+  html {
+    font-size: 10px;
+  }
 }
-
-/* Remove default list styles */
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
-
-/* Set padding for list items */
 li {
-    padding: 10px; /* Adjust the padding to your preference */
-    margin-bottom: 10px; /* Add margin at the bottom to create spacing between list items */
+  padding: 10px;
+  margin-bottom: 10px;
 }
-
-
-/* Set a delay for the appearance of text */
 .info h1,
 .info h2,
 .info p,
 .info a {
-    opacity: 0; /* Set initial opacity to 0 */
-    animation: fadeIn 1s ease-out 5s forwards; /* Use a 5-second delay */
+  opacity: 0;
+  animation: fadeIn 1s ease-out 5s forwards;
 }
-
 .chef {
-    opacity: 0; /* Set initial opacity to 0 */
-    animation: fadeIn 5s ease-out 10s forwards; /* Use a 5-second delay */
+  opacity: 0;
+  animation: fadeIn 5s ease-out 10s forwards;
 }
-
-
 .book {
-    opacity: 0; /* Set initial opacity to 0 */
-    animation: fadeIn 10s ease-out 15s forwards; /* Use a 5-second delay */
+  opacity: 0;
+  animation: fadeIn 10s ease-out 15s forwards;
 }
-
-
-
-/* Keyframes for fading in */
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
-
-
-
-
-
-
-
-
-/* Styling for the Footer */
 footer {
-    background-color: #333; /* Background color for the footer */
-    color: white; /* Text color */
-    padding: 20px 0; /* Padding at the top and bottom */
+  background-color: #333;
+  color: white;
+  padding: 20px 0;
 }
-
-/* Center the content within the container */
 footer .container {
-    text-align: center;
+  text-align: center;
 }
-
-/* Style for the copyright text */
 footer p {
-    margin: 0; /* Remove default margin */
-    font-size: 14px; /* Set the font size */
+  margin: 0;
+  font-size: 14px;
 }
-
-
-
